# plasma-workspace

applets/batterymonitor/package/contents/ui/: BatteryItem.qml  batterymonitor.qml
applets/lock_logout/contents/ui/: lockout.qml
applets/notifications/package/contents/ui/: main.qml
applets/systemtray/package/contents/ui/: CompactRepresentation.qml  ExpandedRepresentation.qml  PlasmoidItemProxy.qml  TaskDelegate.qml
applets/systemtray/plugin/: host.cpp  task.cpp  tasklistmodel.cpp  tasklistmodel.h
applets/systemtray/plugin/protocols/plasmoid/: plasmoidtask.cpp
components/shellprivate/widgetexplorer/: plasmoids.knsrc
dataengines/statusnotifieritem/libdbusmenuqt/: dbusmenuimporter.cpp
krunner/dbus/: org.kde.krunner.service.in
ksmserver/: shutdowndlg.cpp
ksmserver/screenlocker/greeter/: main.cpp
kuiserver/: org.kde.kuiserver.service.in
lookandfeel/contents/components/: BreezeBlock.qml  BreezeHeading.qml  BreezeLabel.qml  UserList.qml
plasma-windowed/: CMakeLists.txt  main.cpp  plasmawindowedcorona.cpp  plasmawindowedcorona.h  simpleshellcorona.cpp  simpleshellcorona.h  simpleshellview.cpp  simpleshellview.h
sddm-theme/: theme.conf.cmake
shell/: shellcorona.cpp  waylanddialogfilter.cpp  waylanddialogfilter.h
startkde/: CMakeLists.txt  startkde.cmake  startplasma.cmake  startplasmacompositor.cmake
startkde/defaultloggingrules/: CMakeLists.txt  setDefaultLoggingRules.sh  setDefaultLoggingRules.upd
startkde/kstartupconfig/: kstartupconfig.cpp
startkde/waitforname/: org.kde.plasma.Notifications.service.in
wallpapers/image/: wallpaper.knsrc
